--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,21 @@
-body {
-    background-color: black;
-    @media all and(max-width: 768px) {
-    background-color: red;
-    }
-    @media all and(max-width: 768px) {
-    font-size: 14px;
-    }
-}
+// Note: any .css or .scss files included in the 'styles' directory
+// will be correctly compiled during `gulp` and `gulp production`
+
+//* Vendors *//
+@import './src/vendor_entries/_include-media-or';
+
+
+//* Abstracts modules *//
+@import 'abstracts/main';
+
+//* Base modules *//
+@import 'base/main';
+
+//* Layout modules *//
+@import 'layout/main';
+
+//* Pages modules *//
+@import 'pages/main';
+
+//* Components *//
+@import 'components/main';
