--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -1,6 +1,13 @@
+html, body {
+    height: 100%;
+  }
+body {
+    display: flex;
+    flex-direction: column;
+  }
 .content {
-    min-height: calc(100vh - 70px);
+    flex: 1 0 auto;
   }
 .footer {
-    height: 50px;
+    flex-shrink: 0;
   }
