--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -1,6 +1,25 @@
 header {
+  overflow: hidden;
+  background-color: #373c3f;
+  width: 100%;
+  height: 97px;
+  nav {
     overflow: hidden;
-    background-color: #373c3f;
-    width: 100%;
-    height: 97px;
+    ul {
+      display: flex;
+      flex-direction: row;
+      margin: 44px 0 0 54px;
+      list-style: none;
+        li {
+         padding: 0 31px 0 0;
+          a {
+          color: #fff;
+          font-family: 'Montserrat', sans-serif;
+          font-size: 15px;
+          font-weight: 400;
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
