update folders structure

--- a/app/scss/base/reset.scss
+++ b/app/scss/base/reset.scss
@@ -12,12 +12,18 @@ html {
   font-size: 62.5%;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   @include font-smoothing(on);
   color: var(--base-text-color);
   background: var(--base-background-color);
   font: var(--base-font-size) / var(--base-line-height) var(--base-font-family);
   min-width: var(--base-min-width);
+  display: flex;
+  flex-direction: column;
 }
 
 // adaptive images
