--- a/app/scss/base/reset.scss
+++ b/app/scss/base/reset.scss
@@ -21,6 +21,10 @@ body {
   min-width: var(--base-min-width);
 }
 
+a {
+  text-decoration: none;
+}
+
 // adaptive images
 img {
   max-width: 100%;
