--- a/app/scss/components/banner.scss
+++ b/app/scss/components/banner.scss
@@ -2,4 +2,41 @@
     background: rgb(7,138,164);
     background: linear-gradient(333deg, rgba(7,138,164,1) 0%, rgba(14,165,187,1) 35%, rgba(23,178,196,1) 100%);
     height: 579px;
+
+    .container {
+        position: relative;
+        height: 100%;
+        margin-left: 78px;
+    }
+
+    .holder {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+    }
+
+    h1 {
+        margin: 0;
+        font: 400 60px/1 'Montserrat', 'Arial', 'Helvetica Neue', sans-serif;
+        color: #fff;
+        margin-bottom: 63px;
+    
+    }
+
+    a {
+        font: 700 34px/1 'Montserrat', 'Arial', 'Helvetica Neue', sans-serif;
+        color: #fff;
+        display: block;
+        width: 100%;
+
+        &:after {
+            font: 700 34px/1 'Quicksand', 'Arial', 'Helvetica Neue', sans-serif;
+            color: #fff;
+            content: '>';
+            position: absolute;
+            right: 223px;
+        }
+    }
 }
