--- a/app/scss/components/banner.scss
+++ b/app/scss/components/banner.scss
@@ -30,6 +30,7 @@
         color: #fff;
         display: block;
         width: 100%;
+        opacity: 0.5;
 
         &:after {
             font: 700 34px/1 'Quicksand', 'Arial', 'Helvetica Neue', sans-serif;
