--- a/app/scss/components/list-portfolio.scss
+++ b/app/scss/components/list-portfolio.scss
@@ -1,12 +1,27 @@
 .list-portfolio {
-    display: flex;
-    list-style: none;
-    justify-content: center;
+    @extend %listreset;
+    height: 100%;
     li {
-        
-        img {
-            width: 341px;
-            height: 295px;
+        float: left;
+        width: 33.3%;
+        height: 100%;
+    }
+    img,
+    a {
+        width: 100%;
+        height: 100%;
+        display: block;
+    }
+    a {
+        font: 700 70px/1 'Quicksand', 'Arial', 'Helvetica Neue', sans-serif;
+        color: #fff;
+        background-color: #5b0fa1;
+        position: relative;
+        span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
         }
     }
 }
