br-2: modified components according to comments from pull request

--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -1,5 +1,10 @@
 .header {
-  padding-top: 12px;
-  padding-bottom: 10px;
+  padding-top: 39px;
+  padding-bottom: 39px;
   background-color: #373c3f;
+  
+  .container {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
 }
