--- a/app/scss/components/nav-list.scss
+++ b/app/scss/components/nav-list.scss
@@ -11,13 +11,12 @@
   }
 
   a {
-    transition: opacity 250ms linear, color 300ms linear;
+    transition: opacity 250ms linear;
     font: 400 15px/1 'Montserrat', 'Arial', 'Helvetica Neue' sans-serif;
     color: #fff;
 
     &:hover, 
     &:active {
-      color: violet;
       opacity: 0.5;
     }
   }
