--- a/app/scss/components/text-link.scss
+++ b/app/scss/components/text-link.scss
@@ -1,11 +1,7 @@
 .text-link {
-    background-color: #27212c;
-    width: 100%;
-    height: 244px;
-
+    overflow: hidden;
+    padding-top: 110px;
     p {
-        padding-top: 112px;
-        padding-left: 84px;
         font: 700 30px/1 'Montserrat', 'Arial', 'Helvetica Neue', sans-serif;
         color: #9282a0;
     }
