--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -2,4 +2,7 @@
 @import 'logo';
 @import 'nav';
 @import 'nav-list';
+@import 'text-part';
+@import 'heading-text';
+@import 'text';
 @import 'footer';
