br-4: modified section link-portfolio

--- a/app/scss/components/link-portfolio.scss
+++ b/app/scss/components/link-portfolio.scss
@@ -1,4 +1,10 @@
 .link-portfolio {
     background-color: #27212c;
     height: 244px;
+
+    .container {
+        height: 100%;
+        padding-right: 0;
+        padding-left: 0;
+    }
 }
