--- a/app/scss/components/text-link.scss
+++ b/app/scss/components/text-link.scss
@@ -1,8 +1,13 @@
 .text-link {
     overflow: hidden;
-    padding-top: 110px;
-    p {
-        font: 700 30px/1 'Montserrat', 'Arial', 'Helvetica Neue', sans-serif;
-        color: #9282a0;
+    position: relative;
+    font: 700 30px/1 'Montserrat', 'Arial', 'Helvetica Neue', sans-serif;
+    color: #9282a0;
+    height: 100%;
+
+    .holder {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
     }
 }
