br-7: footer update

--- a/app/scss/components/copyright.scss
+++ b/app/scss/components/copyright.scss
@@ -1,12 +1,12 @@
 .copyright {
-    overflow: hidden;
+    float: left;
 
     p {
-    font: 400 15px/1 'Montserrat', 'Arial', 'Helvetica Neue' sans-serif;
-    color: #fff;
+        font: 400 15px/1 'Montserrat', 'Arial', 'Helvetica Neue' sans-serif;
+        color: #fff;
 
         span {
-        color: #4eefc3;
+            color: #bc3183;
         }
     }
 }
