--- a/app/scss/components/link-portfolio.scss
+++ b/app/scss/components/link-portfolio.scss
@@ -7,4 +7,9 @@
         padding-right: 0;
         padding-left: 0;
     }
+    .link {
+        float: right;
+        width: 228px;
+        height: 100%;
+    }
 }
