--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -5,10 +5,9 @@
 @import 'banner';
 @import 'link-portfolio';
 @import 'text-link';
-@import 'background-link';
+@import 'link';
 @import 'portfolio';
 @import 'list-portfolio';
-@import 'container';
 @import 'text-part';
 @import 'text';
 @import 'copyright';
