--- a/app/scss/components/footer.scss
+++ b/app/scss/components/footer.scss
@@ -1,6 +1,5 @@
 .footer {
+  @include head-footer;
   flex-shrink: 0;
-  padding-top: 39px;
-  padding-bottom: 39px;
-  background-color: #373c3f;
+  background-color: var(--color-header-footer);
   }
