--- a/app/scss/components/logo.scss
+++ b/app/scss/components/logo.scss
@@ -3,7 +3,7 @@
   width: 100px;
 
   a {
-    font: 400 24px/1 'Montserrat', 'Arial', 'Helvetica Neue' sans-serif;
-    color: #fff;
+    font: var(--font-weight-logo) var(--font-size-logo) var(--font-sans-serif);
+    color: var(--color-white);
   }
 }
