--- a/app/scss/components/text-part.scss
+++ b/app/scss/components/text-part.scss
@@ -1,13 +1,13 @@
 .text-part {
     padding-top: 55px;
     padding-bottom: 175px;
-    background-color: #ebebeb;
-    font: 400 14px/26px 'Montserrat', 'Arial', 'Helvetica Neue', sans-serif;
-    color: #515151;
+    background-color: var(--background-color-text-part);
+    font: var(--font-weight-text-part) var(--font-size-text-part) var(--font-sans-serif);
+    color: var(--color-text-part);
 
     h3 {
-        font: 400 30px/1 'Montserrat', 'Arial', 'Helvetica Neue', sans-serif;
-        color: #088ca5;
+        font: var(--font-weight-text-h3) var(--font-size-text-h3) var(--font-sans-serif);
+        color: var(--color-text-part-h3);
         margin-bottom: 32px;
     }
 
