--- a/app/scss/layout/container.scss
+++ b/app/scss/layout/container.scss
@@ -1,6 +1,3 @@
 .container {
-    padding-right: 12px;
-    padding-left: 12px;
-    max-width: 960px;
-    margin: 0 auto;
+    @include container;
 }
