br-flex: modified files from floats to flex

--- a/app/scss/components/copyright.scss
+++ b/app/scss/components/copyright.scss
@@ -1,5 +1,5 @@
 .copyright {
-    float: left;
+    position: absolute;
 
     p {
         font: var(--font-weight-copyright) var(--font-size-copyright) var(--font-sans-serif);
