--- a/app/scss/abstracts/mixins.scss
+++ b/app/scss/abstracts/mixins.scss
@@ -247,3 +247,9 @@
     padding-top: 39px;
     padding-bottom: 39px;
   }
+  
+  @mixin flex {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+  }
