--- a/app/scss/components/social-network.scss
+++ b/app/scss/components/social-network.scss
@@ -1,9 +1,8 @@
 .social-network {
     @extend %listreset;
-    float: right;
+    @include flex;
 
     li {
-        float: left;
         padding-left: 31px;
         
         &:first-child {
