--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -2,6 +2,8 @@
 @import 'logo';
 @import 'nav';
 @import 'nav-list';
+@import 'menu';
+@import 'menu-close';
 @import 'banner';
 @import 'link-portfolio';
 @import 'text-link';
