--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -1,5 +1,10 @@
 .header {
   @include head-footer;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
   background-color: var(--color-header-footer);
   
   .container {
