--- a/app/scss/components/nav.scss
+++ b/app/scss/components/nav.scss
@@ -1,3 +1,15 @@
 .nav {
     @include flex;
+
+    &.active {
+        position: absolute;
+        z-index: 3;
+        top: 80;
+        left: 0;
+        display: block;
+    }
+
+    @media (max-width: 320px) {
+        display: none;
+      }
 }
