--- a/app/scss/components/banner.scss
+++ b/app/scss/components/banner.scss
@@ -3,7 +3,15 @@
     background: var(--color-banner-gradient);
     height: 579px;
 
-    @media (max-width: 320px) {
+    @media (max-width: var(--desktop)) {
+        height: 550px;
+    }
+
+    @media (max-width: var(--tablet)) {
+        height: 350px;
+    }
+
+    @media (max-width: 480px) {
         height: 175px;
     }
 
@@ -17,18 +25,23 @@
         width: 100%;
         max-width: 695px;
 
-        @media (max-width: 320px) {
-            @include position;
+        @media (max-width: 480px) {
+            position: absolute;
+            top: 50%;
+            //Позиционирование контентной части в лево
+            left: 15%;
+            transform: none;
+            max-width: 190px;
         }
     }
 
     h1 {
-        margin: 0 0 63px;
+        margin: 0 0 32px;
         font: var(--font-weight-banner-h1) var(--font-size-banner-h1) var(--font-sans-serif);
         color: var(--color-white);
         
         @media (max-width: 320px) {
-            margin: 0 0 0;
+            margin: 0 0 17px;
         }
     
     }
