--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -1,14 +1,25 @@
 .header {
-  @include head-footer;
   position: fixed;
-  width: 100%;
   top: 0;
+  right: 0;
   left: 0;
   z-index: 50;
   background-color: var(--color-header-footer);
+  padding-top: 39px;
+  padding-bottom: 39px;
+
+  @media (max-width: 480px) {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
   
   .container {
     padding-right: 32px;
     padding-left: 32px;
+
+    @media (max-width: 480px) {
+      padding-right: 0;
+      padding-left: 20px;
+    }
   }
 }
