--- a/app/scss/components/link-portfolio.scss
+++ b/app/scss/components/link-portfolio.scss
@@ -1,15 +1,25 @@
 .link-portfolio {
     background-color: #27212c;
-    height: 244px;
+    height: 245px;
+
+    @media (max-width: 480px) {
+        height: 75px;
+    }
 
     .container {
+        display: flex;
+        justify-content: space-between;
         height: 100%;
         padding-right: 0;
         padding-left: 0;
     }
     .link {
-        float: right;
+        display: block;
         width: 228px;
         height: 100%;
+
+        @media (max-width: 480px) {
+            width: 71px;
+        }
     }
 }
