--- a/app/scss/components/logo.scss
+++ b/app/scss/components/logo.scss
@@ -1,15 +1,9 @@
 .logo {
-  position: absolute;
-  width: 100px;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   a {
-    font: var(--font-weight-logo) var(--font-size-logo) var(--font-sans-serif);
+    font: var(--font-weight-logo) var(--font-size-logo)/1 var(--font-sans-serif);
     color: var(--color-white);
-  }
-
-  @media (max-width: 320px) {
-    top: 50%;
-    left: 0;
-    transform: translateX(-50%, -0);
   }
 }
