--- a/app/scss/components/text-link.scss
+++ b/app/scss/components/text-link.scss
@@ -1,13 +1,15 @@
 .text-link {
-    overflow: hidden;
-    position: relative;
     font: var(--font-weight-text-link) var(--font-size-text-link) var(--font-sans-serif);
     color: var(--color-text-link);
     height: 100%;
+    display: flex;
+    align-items: center;
 
     .holder {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
+        flex: 1;
+
+        @media (max-width: 480px) {
+            padding-left: 26px;
+        }
     }
 }
