--- a/app/scss/components/nav.scss
+++ b/app/scss/components/nav.scss
@@ -2,7 +2,6 @@
     @include flex;
 
     &.is-opened {
-        display: block;
         position: fixed;
         top: 0;
         right: 0;
@@ -10,18 +9,12 @@
         left: 0;
         z-index: 100;
         background: #202529;
+        display: flex;
+        justify-content: center;
 
     }
     
     @media (max-width: 979px) {
-        display: none;
-    }
-
-    @media (max-width: var(--tablet)) {
-        display: none;
-    }
-
-    @media (max-width: var(--phone)) {
         display: none;
     }
 }
