--- a/app/scss/abstracts/variables.scss
+++ b/app/scss/abstracts/variables.scss
@@ -42,26 +42,59 @@ $breakpoints: (
   --font-serif: 'Times New Roman', Times, Baskerville, Georgia, serif;
 
   //Style fonts
-  --font-weight-logo: 400;
-  --font-size-logo: 17px/1;
 
   --font-weight-nav: 400;
   --font-size-nav: 15px/1;
 
+  @media (max-width: 979px) {
+    --font-weight-nav: 400;
+    --font-size-nav: 30px/1;
+  }
+
+  @media (max-width: 768px) {
+    --font-weight-nav: 400;
+    --font-size-nav: 25px/1;
+  }
+
+  @media (max-width: 480px) {
+    --font-weight-nav: 400;
+    --font-size-nav: 15px/1;
+  }
+
   --font-weight-banner-h1: 400;
   --font-size-banner-h1: 60px/1;
+
+  @media (max-width: 768px) {
+    --font-weight-banner-h1: 400;
+    --font-size-banner-h1: 30px/1;
+}
+
   @media (max-width: 480px) {
     --font-weight-banner-h1: 400;
     --font-size-banner-h1: 13px/1;
 }
+
   --font-weight-banner-a: 700;
   --font-size-banner-a: 34px/1;
+
+  @media (max-width: 768px) {
+    --font-weight-banner-a: 700;
+    --font-size-banner-a: 26px/1;
+}
+
   @media (max-width: 480px) {
     --font-weight-banner-a: 700;
     --font-size-banner-a: 11px/1;
 }
+
   --font-weight-banner: 700;
   --font-size-banner: 36px/1;
+
+  @media (max-width: 768px) {
+    --font-weight-banner: 700;
+    --font-size-banner: 26px/1;
+}
+
   @media (max-width: 480px) {
     --font-weight-banner: 700;
     --font-size-banner: 11px/1;
@@ -69,6 +102,12 @@ $breakpoints: (
 
   --font-weight-text-link: 700;
   --font-size-text-link: 30px/1;
+
+  @media (max-width: 768px) {
+    --font-weight-text-link: 700;
+    --font-size-text-link: 22px/1;
+  }
+
   @media (max-width: 480px) {
     --font-weight-text-link: 700;
     --font-size-text-link: 11px/1;
@@ -76,14 +115,66 @@ $breakpoints: (
 
   --font-weight-text-part: 400;
   --font-size-text-part: 14px/26px;
+
+  @media (max-width: 979px) {
+    --font-weight-text-part: 400;
+    --font-size-text-part: 25px/26px;
+  }
+
+  @media (max-width: 768px) {
+    --font-weight-text-part: 400;
+    --font-size-text-part: 20px/26px;
+  }
+
+  @media (max-width: 480px) {
+    --font-weight-text-part: 400;
+    --font-size-text-part: 14px/26px;
+  }
+
   --font-weight-text-h3: 400;
   --font-size-text-h3: 30px/1;
+
+  @media (max-width: 979px) {
+    --font-weight-text-h3: 400;
+    --font-size-text-h3: 40px/1;
+  }
+
+  @media (max-width: 768px) {
+    --font-weight-text-h3: 400;
+    --font-size-text-h3: 37px/1;
+  }
+
+  @media (max-width: 480px) {
+    --font-weight-text-h3: 400;
+    --font-size-text-h3: 30px/1;
+  }
 
   --font-weight-copyright: 400;
   --font-size-copyright: 15px/1;
 
+  @media (max-width: 979px) {
+    --font-weight-copyright: 400;
+    --font-size-copyright: 25px/1;
+  }
+
+  @media (max-width: 768px) {
+    --font-weight-copyright: 400;
+    --font-size-copyright: 20px/1;
+  }
+
+  @media (max-width: 480px) {
+    --font-weight-copyright: 400;
+    --font-size-copyright: 15px/1;
+  }
+
   --font-weight-link: 700;
   --font-size-link: 50px/1;
+
+  @media (max-width: 768px) {
+    --font-weight-link: 700;
+    --font-size-link: 38px/1;
+  }
+
   @media (max-width: 480px) {
     --font-weight-link: 700;
     --font-size-link: 31px/1;
@@ -121,5 +212,5 @@ $breakpoints: (
 
   // Layout
   --container-desktop-horizontal-padding: 12px;
-  --container-desktop-width: 960px;
+  --container-desktop-width: 979px;
 }
