--- a/app/scss/components/footer.scss
+++ b/app/scss/components/footer.scss
@@ -4,8 +4,18 @@
   padding-top: 39px;
   padding-bottom: 39px;
 
-  @media (max-width: 320px) {
-    padding-top: 0px;
-    padding-bottom: 0px;
+  @media (max-width: 979px) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  @media (max-width: 768px) {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  @media (max-width: 480px) {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
