--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -8,7 +8,7 @@
   padding-top: 39px;
   padding-bottom: 39px;
 
-  @media (max-width: 480px) {
+  @media (max-width: 979px) {
     padding-top: 0px;
     padding-bottom: 0px;
 }
@@ -17,9 +17,11 @@
     padding-right: 32px;
     padding-left: 32px;
 
-    @media (max-width: 480px) {
+    @media (max-width: 979px) {
       padding-right: 0;
-      padding-left: 20px;
+      padding-left: 0;
+      display: flex;
+      justify-content: flex-end;
     }
   }
 }
