--- a/app/scss/components/portfolio.scss
+++ b/app/scss/components/portfolio.scss
@@ -4,5 +4,31 @@
         height: 295px;
         padding-right: 0;
         padding-left: 0;
+
+        @media (max-width: 979px) {
+            height: auto;
+        }
+
+        @media (max-width: 768px) {
+            height: auto;
+        }
+
+        @media (max-width: 480px) {
+            height: auto;
+        }
+    }
+
+    .link {
+        @media (max-width: 979px) {
+            height: 846px;
+        }
+
+        @media (max-width: 768px) {
+            height: 664px;
+        }
+
+        @media (max-width: 480px) {
+            height: 415px;
+        }
     }
 }
